# AnelfAgent

./: .gitignore  AGENTS.md  COGNEE.md  LICENSE  MEMORY_SYSTEM_ANALYSIS.md  README.md  amazon_product_info.xlsx  launch.py  pyproject.toml  start.bat  start.sh  startup-report.md
.cursor/rules/: architecture.mdc  global.mdc
agent/: __init__.py  config.py
agent/approval/: __init__.py  gate.py  manager.py  policy.py  (+3 more)
channels/: __init__.py
config/: app_config.example.json  approval_policies.example.json  approval_policies.json  cognee.json  heartbeat.json  introspection.json  llm_clients.example.json  mcp_servers.example.json  mind_config.json  webui.json
core/: __init__.py  api.py  async_helper.py  cache.py  command.py  config.py  console.py  data_model.py  download.py  entity.py  event_bus.py  exceptions.py  flow.py  lifecycle.py  log.py  path.py  sanitizer.py  stream_events.py  tags.py  tool_gate.py  tool_schema.py  trace_session.py  tracer.py
entities/: __init__.py  _sdk.py
scripts/: diag_qwen_truncation.py  diag_qwen_truncation2.py  minimax_mcp_wrapper.py  repair_memory_db.py  secrets-backup.bat  secrets-backup.sh  secrets-remove.bat  secrets-remove.sh  secrets-restore.bat  secrets-restore.sh  setup_minimax_mcp.bat  setup_minimax_mcp.sh  start_chrome_debug.sh  test_mcp_roots_fix.py  test_model_api_params.py  weixin_setup.py
services/: __init__.py  _runtime.py  adapter.py  chat.py  database.py  entity.py  mcp.py  memory.py  model.py  persona.py  responses.py  skill.py  status.py  tag.py  tool.py
web/: __init__.py  auth_keys.py  fallback.html  server.py
(+697 files in other folders)
