[project]
name = "AnelfTools"
version = "0.2.0"
description = "AnelfAgent — Unified Agent Framework"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    # 智能体核心（litellm 统一 LLM API，内含 openai 作为传递依赖）
    "litellm>=1.82.0",
    "aiosqlite==0.21.0",
    "pydantic>=2.10.0",
    "fastapi>=0.116.2,<0.139.0",
    "httpx>=0.28.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    # 日志
    "loguru>=0.7.0",
    # Web UI
    "sse-starlette>=2.0.0",
    # 网页内容提取
    "readability-lxml>=0.8.1",
    "markdownify>=0.14.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # 通用工具
    "psutil>=7.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    # 运行时
    "uvicorn>=0.30.0",
    "starlette>=0.48,<1.0",
    # Telegram Bot
    "python-telegram-bot>=22.0",
    # 飞书 / Lark
    "lark-oapi>=1.5.0",
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "minimax-coding-plan-mcp>=0.0.4",
]

[project.optional-dependencies]
cognee = [
    "cognee==1.3.0",
    "chardet>=5,<6",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: requires optional external services or credentials",
]
